TB-2008-10-13-1: Bugfix:     o fixed hedeby test minResource
                             o fixed produce_/reset_* hedeby util
                               functions
                 Enhancem.:  o added hedeby util function
                               get_hedeby_current_services()
                 Cleanup:    o refactored hedeby create_XXX_and_filter() functions
                 Review:     RH

TB-2008-10-13-0: Bugfix:    Fixed bug in set_execd_install_params() used in
                            test for hedeby issue 571
                 Cleanup:   o hedeby issue_571: introduced context variable alias
                 Review:    RH

MB-2008-10-11-0: Bugfix:    Updated hedeby tests (because of fix of issue 544)
                 Review:    RH,AF,TB

JG-2008-10-10-0: Enhancem.: Cleanup and partly rewrite of
                            system_tests/config/submit_hosts.
                 Review:    DG

JG-2008-10-08-0: Enhancem.: New check for IZ 2737 in functional/access_lists.
                 Review:    CR

JG-2008-10-08-0: Bugfix:    Fixed bugs/issuezilla/2328
                 Review:    CR

TB-2008-10-07-1: Bugfix:    Made failing hedeby test for issue 537 more robust
                 Enhancem.: o Changed hedeby test for issue 537 to use optional
                              named argument passing:
                            o new procedure util/hedeby_mod_setup_opt()
                 Review:    MG

TB-2008-10-07-0: Enhancem.: o new helper function tcl_util/pick_random()
                 Review:    CR

JG-2008-10-06-0: Enhancem.: Do testsuite locking on the results directory
                            instead of on the testsuite source directory.
                            Some cleanup.
                 Review:    CR

JF-2008-10-06-0: Enhancem.:  New test for testsuite. SGE issue 2582.
                 Review:     LP

MG-2008-10-04-0: Bugfix:    small TCL error fix for MinResource test for Hedeby.
                 Review:    MB
